# algorithms-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
common/: Cargo.toml  README.md
common/src/: lib.rs
patterns/: README.md
patterns/consensus/: README.md
patterns/consensus/leader-election/: Cargo.toml  README.md
patterns/consensus/paxos/: Cargo.toml  README.md
patterns/consensus/raft/: Cargo.toml  README.md
patterns/consensus/three-phase-commit/: Cargo.toml  README.md
patterns/consensus/two-phase-commit/: Cargo.toml  README.md
patterns/discovery/: README.md
patterns/discovery/load-balancer/: Cargo.toml  README.md
patterns/discovery/service-registry/: Cargo.toml  README.md
patterns/discovery/sidecar/: Cargo.toml  README.md
patterns/fault-tolerance/: README.md
patterns/fault-tolerance/bulkhead/: Cargo.toml  README.md
patterns/fault-tolerance/circuit-breaker/: Cargo.toml  README.md
patterns/fault-tolerance/fallback/: Cargo.toml  README.md
patterns/fault-tolerance/retry-backoff/: Cargo.toml  README.md
patterns/fault-tolerance/timeout/: Cargo.toml  README.md
patterns/gossip/: README.md
patterns/gossip/chord-dht/: Cargo.toml  README.md
patterns/gossip/epidemic-broadcast/: Cargo.toml  README.md
patterns/gossip/gossip-protocol/: Cargo.toml  README.md
patterns/id-generation/snowflake/: Cargo.toml  README.md
patterns/messaging/: README.md
patterns/messaging/cqrs/: Cargo.toml  README.md
patterns/messaging/event-sourcing/: Cargo.toml  README.md
patterns/messaging/outbox/: Cargo.toml  README.md
patterns/messaging/pub-sub/: Cargo.toml  README.md
patterns/messaging/saga-choreography/: Cargo.toml  README.md
patterns/messaging/saga-orchestration/: Cargo.toml  README.md
patterns/observability/: README.md
patterns/observability/distributed-tracing/: Cargo.toml  README.md
patterns/observability/health-check/: Cargo.toml  README.md
patterns/observability/heartbeat/: Cargo.toml  README.md
patterns/partitioning/: README.md
patterns/partitioning/consistent-hashing/: Cargo.toml  README.md
patterns/partitioning/range-partitioning/: Cargo.toml  README.md
patterns/partitioning/rendezvous-hashing/: Cargo.toml  README.md
patterns/replication/: README.md
patterns/replication/read-repair/: Cargo.toml  README.md
patterns/replication/read-repair/src/: lib.rs  main.rs
patterns/replication/read-repair/tests/: integration_test.rs
(+122 files in other folders)
