[package]
name    = "read-repair"
version = "0.1.0"
edition = "2021"

[dependencies]
common             = { path = "../../../common" }
crossbeam-channel  = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
rand               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
